Fix issue #741: Removed border-radius on align left

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -18,7 +18,7 @@ code {
   font-weight: 400;
   white-space: nowrap;
   background-color: #918caf24;
-  border-radius: 0.25em;
+  border-radius: 0;
 }
 
 .code {
